no alexa, static upload port

--- a/platformio.ini
+++ b/platformio.ini
@@ -150,6 +150,7 @@ lib_deps =
 # see: http://docs.platformio.org/en/latest/platforms/espressif32.html
 [env:esp32dev]
 board = esp32dev
+upload_port = /dev/ttyUSB0
 platform = ${common:esp32.platform}
 monitor_speed = ${common.monitor_speed}
 upload_speed = ${common.upload_speed_fast}
